# dark-star

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
assets/: assets.json
include/: DarkStar.h
include/DarkStar/: Core.h  Engine.h  EntryPoint.h  Indetifiers.h
include/DarkStar/Application/: Application.h
include/DarkStar/Asset/: AssetHolder.h
include/DarkStar/Engine/: Engine.h
include/DarkStar/Manager/: AssetManager.h  LogManager.h  Manager.h  RenderManager.h
include/DarkStar/Render/: Renderer.h
include/DarkStar/Utils/: AssetUtils.h  ConfigurationUtils.h
src/: CMakeLists.txt  Engine.cpp
src/Application/: Application.cpp
src/Engine/: Engine.cpp
src/Manager/: AssetManager.cpp  LogManager.cpp  RenderManager.cpp
src/Render/: Renderer.cpp
test/: CMakeLists.txt  TestApp.cpp  main.cpp
